--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,6 @@
   "name": "99ways",
   "dependencies": {
     "remark": "~0.11.0",
-    "octicons": "~2.4.1",
-    "primer-css": "~2.3.3"
+    "octicons": "~2.4.1"
   }
 }
